# dal-service

./: .env-sample  README.md  pyproject.toml
app/: app.py  main.py
app/middlewares/: authorization.py  error_handling.py
app/utils/: logger.py
src/: app.py  app_config.py  main.py
src/core/: error_handling.py  exception_handlers.py  logger.py  postgres_db_pool.py  safe_json_converter.py  security.py  unit_of_work.py
src/core/exceptions/: configuration_error.py  object_not_found_error.py  stock_error.py
src/dal/: base_postgres_dal.py  item_dal.py  user_dal.py
src/dal/postgres_dal/: base_postgres_dal.py  item_dal.py  user_dal.py
src/databases_access_layer/postgres_dal/: admin_dal.py  base_postgres_dal.py  company_dal.py  customer_dal.py  (+3 more)
src/entities/: EntityConfig.py  __init__.py  admin_entity.py  company_entity.py  customer_entity.py  item_entity.py  order_entity.py
src/managers/: __init__.py  admin_manager.py  base_manager.py  company_manager.py  customer_manager.py  item_manager.py  order_manager.py  user_manager.py
src/middlewares/: authorization.py  error_catching.py  error_handling.py  rate_limit.py
src/models/: admin.py  company.py  create_response.py  customer.py  item.py  order.py  order_item.py  secure_base_model.py  user.py
src/routers/: __init__.py  admin_router.py  auth_router.py  company_router.py  crud_router.py  customer_router.py  health.py  item_router.py  order_router.py  user_router.py
src/scripts/: alembic_functions_changes_script.py  basic_e2e_tests_schema_demo_routes.py  e2e_tests_demo_item_routes.py  e2e_tests_helpers.py
(+19 files in other folders)
